--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,11 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(246, 246, 246);
+  background-color: rgb(248, 248, 248);
 }
 
 body {
   margin: 0;
   min-height: 100vh;
+  background-image: url('/assets/grid-background.png');
 }
